# icfpc2017

./: .gitignore  README.md  build.gradle
gradle/wrapper/: gradle-wrapper.properties
haskell/: LICENSE  README.md  punter.cabal
haskell/src/: Main.hs  Paths.hs  Protocol.hs  Queue.hs  Solver.hs  State.hs
ops/: OfflineServer.groovy  janDeploy.sh  run.sh  runOffline.sh  setup.sh  setupLooper.sh  start.sh  submission.sh
src/main/java/: Punter.java
src/main/java/io/: Claim.java  Future.java  Gameplay.java  Handshake.java  Map.java  Move.java  Pass.java  ProtocolException.java  River.java  Scoring.java  Settings.java  Setup.java  Site.java
src/main/java/solvers/: ExpandingMineClaimer.java  FutureBack.java  FutureConnecter.java  MaxPointClaimer.java  MineConnectClaimer.java  RandomClaimer.java  SimpleMineClaimer.java  Solver.java  SplurgeFly.java  TwoFly.java
src/main/java/solvers/chris/: HeuristicSolver.java  MonteCarloSolver.java  RiverValue.java
src/main/java/state/: ArrayNatMap.java  Bfs.java  GameState.java  GameStateFactory.java  GraphMap.java  IntQueue.java  LogicException.java  MapBasedGameState.java
src/main/resources/: log4j.properties
src/main/web/: game.js  index.html  style.css  test1.json
src/test/java/state/: GameStateTests.java
